# frankie-sinatra

./: .gitattributes  .gitignore  BUILD.md  DEVELOPMENT.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  transcribe.py  transcribe_hotkey.py  transcribe_menubar.py
